<resources>
    <string name="app_name">Beauty</string>
    <string name="header_auth">Авторизация</string>
    <string name="authInputCaptionText">Мы отправим SMS-сообщение с кодом</string>
    <string name="auth_input_hint">Номер телефона</string>
    <string name="auth_button_text">Получить код</string>
    <string name="auth_bottom_caption_text">Используя это приложение, Вы соглашаетесь с политикой конфиденциальности, с которой Вы можете ознакомиться по этой ссылке</string>
    <string name="pin_caption">Получить новый код через 30 с</string>
    <string name="new_code"><u>Получить новый код</u></string>
    <string name="loremipsum_long"> non nisi est sit amet facilisis magna etiam tempor orci eu lobortis elementum nibh tellus molestie nunc non blandit massa enim nec duinon nisi est sit amet facilisis magna etiam tempor orci eu lobortis elementum nibh tellus molestie nunc non blandit massa enim nec dui  nunc mattis enim ut tellus elementum sagittis vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum morbi blandit cursus risus at ultrices non nisi est sit amet facilisis magna etiam tempor orci eu lobortis elementum nibh tellus molestie nunc non blandit massa enim nec dui nunc mattis enim ut tellus elementum sagittis vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum morbi blandit cursus risus at ultrices</string>

    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>
    <string name="amplitude_apikey">2a0aa04769ba1872ab51d87b0626f18a</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>

</resources>
