<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.devrock.beautyappv2.auth.phone.AuthViewModel" />
    </data>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >

        <TextView
            android:id="@+id/authHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/header_auth"
            android:textAlignment="center"
            android:textColor="@color/neutral0"
            android:textSize="34sp" />

        <com.devrock.beautyappv2.ui.ColorTextInput
            android:id="@+id/authPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:boxStrokeWidth="2dp"
            android:theme="@style/TextInput"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="59dp"
                android:layout_marginEnd="59dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/auth_input_hint"
                android:inputType="phone"
                android:textColor="@color/neutral0"
                android:lines="1"
                android:maxLength="18" />

        </com.devrock.beautyappv2.ui.ColorTextInput>

        <TextView
            android:id="@+id/authInputCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="59dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/roboto"
            android:text="@string/authInputCaptionText"
            android:textColor="@color/neutral1"
            android:textSize="12sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:lottie_rawRes="@raw/loading"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            />

        <Button
            android:id="@+id/authButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_button_text"
            android:textColor="#ffffff"
            android:textSize="17dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="59dp"
            android:layout_marginEnd="59dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:height="52dp"
            android:background="@drawable/auth_button"
            />
        </LinearLayout>
</layout>